--- a/app/templates/ventas/nueva_venta.html
+++ b/app/templates/ventas/nueva_venta.html
@@ -31,16 +31,10 @@
                      data-stock="{{ p.existencia }}"
                      data-category="{{ p.categoria }}">
                     <div class="product-img-wrapper">
-                        {% set img_url = get_product_image(p.codigo) %}
-                        {% if img_url %}
-                            <img src="{{ img_url }}" 
-                                 alt="{{ p.descripcion }}" 
-                                 class="product-img">
-                        {% else %}
-                            <span style="font-size: 3rem;">
-                                {% if p.categoria == 'fruta' %}🍎{% elif p.categoria == 'verdura' %}🥦{% else %}📦{% endif %}
-                            </span>
-                        {% endif %}
+                        <img src="{{ url_for('static', filename='images/productos/' ~ p.codigo ~ '.jpg') }}" 
+                             alt="{{ p.descripcion }}" 
+                             class="product-img"
+                             onerror="this.onerror=null; this.parentElement.innerHTML='📦'; this.remove();">
                     </div>
                     <h6 class="fw-bold mb-1 text-truncate">{{ p.descripcion }}</h6>
                     <div class="d-flex justify-content-between align-items-center mt-2">
