Prueba de scripts

--- a/app/templates/empleados.html
+++ b/app/templates/empleados.html
@@ -155,7 +155,7 @@
                                     <option value="vendedor" {% if e.rol == 'vendedor' %}selected{% endif %}>Vendedor</option>
                                     <option value="almacenista" {% if e.rol == 'almacenista' %}selected{% endif %}>Almacenista</option>
                                     <option value="supervisor" {% if e.rol == 'supervisor' %}selected{% endif %}>Supervisor</option>
-                                    <option value="admin" {% if e.rol == 'admin' %}selected{% endif %}>Admin</option>
+                                    <option value="administrador" {% if e.rol == 'administrador' %}selected{% endif %}>Administrador</option>
                                 </select>
                             </div>
                         </div>
@@ -191,10 +191,7 @@
             </div>
             <form action="{{ url_for('empleado.add_empleado') }}" method="POST">
                 <div class="modal-body pt-4">
-                    <div class="mb-3">
-                        <label class="form-label small text-muted fw-bold">ID Empleado</label>
-                        <input type="number" class="form-control bg-light border-0" name="id_e" required>
-                    </div>
+
                     <div class="mb-3">
                         <label class="form-label small text-muted fw-bold">Nombre Completo</label>
                         <input type="text" class="form-control bg-light border-0" name="nombre" required>
@@ -229,7 +226,7 @@
                             <option value="vendedor">Vendedor</option>
                             <option value="almacenista">Almacenista</option>
                             <option value="supervisor">Supervisor</option>
-                            <option value="admin">Admin</option>
+                            <option value="administrador">Administrador</option>
                         </select>
                     </div>
                 </div>
